syntax = "proto3";

package dash.v1;

import "google/api/annotations.proto";
import "entpb/entpb.proto";


service AdminService {
  rpc AdminList(AdminListRequest) returns (AdminListResponse) {
    option (google.api.http) = {
      get: "/api/admin/list"
    };
  }
  rpc AdminCreate(AdminCreateRequest) returns (AdminCreateResponse) {
    option (google.api.http) = {
      post: "/api/admin/create"
      body: "*"
    };
  }
  rpc AdminUpdate(AdminUpdateRequest) returns (AdminUpdateResponse) {
    option (google.api.http) = {
      post: "/api/admin/update/{id}"
      body: "*"
    };
  }
  rpc AdminDetail(AdminDetailRequest) returns (AdminDetailResponse) {
    option (google.api.http) = {
      get: "/api/admin/detail/{id}"
    };
  }
  rpc AdminDelete(AdminDeleteRequest) returns (AdminDeleteResponse) {
    option (google.api.http) = {
      delete: "/api/admin/delete/{id}"
    };
  }

  rpc AdminRoleList(AdminRoleListRequest) returns (AdminRoleListResponse) {
    option (google.api.http) = {
      get: "/api/admin/role/list"
    };
  }
}

message AdminEdit {
  string avatar = 1;
  string username = 2;
  string nickname = 3;
  string password = 4;
  repeated string roles = 5;
}

message AdminListRequest {
}

message AdminListResponse {
  repeated entpb.Admin admins = 1;
}

message AdminCreateRequest {
  AdminEdit admin = 1;
}

message AdminCreateResponse {
  entpb.Admin admin = 1;
}

message AdminUpdateRequest {
  int64 id = 1; // @gotags: json:"-"` uri:"id"`
  AdminEdit admin = 2;
}

message AdminUpdateResponse {
  entpb.Admin admin = 1;
}

message AdminDetailRequest {
  int64 id = 1; // @gotags: json:"-"` uri:"id"`
}

message AdminDetailResponse {
  entpb.Admin admin = 1;
}

message AdminDeleteRequest {
  int64 id = 1; // @gotags: json:"-"` uri:"id"`
}

message AdminDeleteResponse {
}


message AdminRoleListRequest {
}

message AdminRoleListResponse {
  repeated string roles = 1;
}